# flag-ref-api

./: .gitignore  Procfile  flag-ref.db  pyproject.toml  requirements.txt
flag_ref_api/: crud.py  database.py  encrypto.py  main.py  models.py  schema.py
flag_ref_api/scripts/: bulkadd.py  deleter.py  display_vote.py
